--- a/src/package.json
+++ b/src/package.json
@@ -20,6 +20,7 @@
     "@angular/platform-browser": "^19.0.0",
     "@angular/platform-browser-dynamic": "^19.0.0",
     "@angular/router": "^19.0.0",
+    "@daypilot/daypilot-lite-angular": "^4.5.0",
     "jquery": "^3.7.1",
     "primeicons": "^7.0.0",
     "primeng": "^19.1.4",
