--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@daypilot/daypilot-lite-angular": "^4.5.0",
     "date-fns": "^4.1.0",
     "jquery": "^3.7.1",
+    "lucide-angular": "^0.548.0",
     "primeicons": "^7.0.0",
     "primeng": "^19.1.4",
     "rxjs": "~7.8.0",
